test/litecheck/cases/run_invalid-1.expected
run_invalid-1.test:2: [error] invalid RUN directive: `echo ${34 / "hello"}', caused by
[semantic error] require `Int' type, but is `String' type
 --> (loaded):1:13
echo ${34 / "hello"}
            ^~~~~~~

